--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ out/
 # Gradle files
 .gradle/
 build/
+target/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -20,10 +21,10 @@ proguard/
 build/
 
 # Intellij project files
-#*.iml
+*.iml
 *.ipr
 *.iws
-#.idea/
+.idea/
 
 #gradle
 .gradle/
